# tb_internship

./: .gitignore  .gitmodules  README.md  pyproject.toml  run_sweeps.sh
data/real/: data_description.md
experiments/: _io.py  recompute_metrics.py  run_baselines_sweep.py  run_parameter_sweep.py  run_synthetic_validation.py
figures/main/: fig1a_scorecard.tex
notebooks/: baselines_sweep_plots.ipynb  cmm_delamanid.ipynb  cmm_synthetic_validation.ipynb  data_exploration.ipynb  pyagrum_tutorials.ipynb  sweep_plots.ipynb
notes/: cfs_comparison_design.md  perturbation_theorem.md  pipeline.ipynb  pipeline.md  pipeline_v1.md
results/baselines_20260430_1451/: results.csv
results/baselines_20260430_1510/: config.json  results.csv
results/baselines_20260430_1540/: results.csv
results/baselines_20260430_1547/: results.csv
results/baselines_20260430_1722/: results.csv
results/bootstrap_20260423_1549/: edge_stability.csv  stable_edges.csv  stable_graph.bifxml
results/sweep_20260428_1453/: results.csv
results/sweep_20260429_1436/: config.json  results.csv
results/sweep_20260430_1533/: config.json
results/sweep_20260430_1555/: config.json
results/synthetic_validation_20260424_1537/: config.txt
results/synthetic_validation_20260427_0757/: config.txt
results/synthetic_validation_20260427_0820/: config.txt
results/tb_bootstrap_dlm_20260504_1456/: config.json
results/tb_subsample_dlm_20260505_1554/: config.json
results/tb_subsample_dlm_20260515_1030/: edge_stability.csv
results/tb_subsample_dlm_lineage_20260508_0047/: per_node_k.csv
results/tb_subsample_dlm_lineage_20260511_0956/: config.json
results/tb_subsample_dlm_lineage_20260512_1807/: config.json  edge_stability.csv
results/tb_subsample_dlm_lineage_20260515_0143/: config.json  edge_stability.csv  per_node_k.csv
results/tb_subsample_dlm_lineage_type_20260514_1510/: per_node_k.csv
results/vs_baselines/: config.json  results.csv
src/: __init__.py  clean_tb_data.py
src/causal_discovery/: cmm_utils.py
src/causal_prior/: __init__.py  baselines.py  binarize.py  cfs_results.py  cv_mu.py  figstyle.py  graph_metrics.py  loading.py  metrics.py  paper.mplstyle  priors.py  q_sources.py  scorecard.py  stability.py  visualization.py
src/cmm/: cmm_utils.py
src/data/: load_tb.py  synthetic.py  synthetic_envs.py  synthetic_lingauss.py
src_tb/: __init__.py  config.py
src_tb/causal_discovery/: cmm_utils.py  priors.py  visualization.py
(+1999 files in other folders)
